--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
-streamlit
-requests
-beautifulsoup4
-python-dotenv
-langchain
-langchain-community
-langchain-google-genai
-google-generativeai
-faiss-cpu
+Flask==2.3.3
+Flask-Session==0.5.0
+requests==2.31.0
+beautifulsoup4==4.12.2
+python-dotenv==1.0.1
+uuid==1.30
+PyPDF2==3.0.1
+python-docx==1.1.0
+openpyxl==3.1.2
+langchain==0.1.16
+langchain-community==0.0.37
+langchain-google-genai==0.0.7
+google-generativeai==0.3.2
+faiss-cpu==1.7.4
